Messaging Module - switched from BASE64Encoder/BASE64Decoder to Base64 (xerxes) and added encryption tests